sample/privilegedcontainers-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPrivilegedContainer
#kind: K8sPSPPrivilegedContainer
metadata:
  name: privileged-container
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
      - namespaceselector:
              matchExpressions:
                      - {key: pod_security, operator: notIn, values: [exempt]}
    excludedNamespaces: ["kube-system"]
