sample/selinux-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPSELinux
metadata:
  name: k8spspselinux
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    allowedSELinuxOptions:
        level: s0:c123,c456
        role: object_r
        type: svirt_sandbox_file_t
        user: system_u
    rule: "MustRunAs"     ##"MustRunAs" #"MayRunAs", "RunAsAny"
#    ranges:
#      - min: 1
#        max: 1000
